@@ -1,5 +1,6 @@
 # This file documents the revision history for Perl extension Catalyst.
 
+        - Use compile time extends in Catalyst::Controller (t0m)
         - Make Catalyst::Request::uploads attribute non-lazy, to fix
           test for Catalyst-Engine-Apache (t0m)
         - Bump version of MooseX::Emulate::Class::Accessor::Fast (t0m)
